BUILD - 51-2309-mondial-rugby - v0.0.0-stable-12 - fix bugs on firefox

--- a/src/apps/Cover/styles.scss
+++ b/src/apps/Cover/styles.scss
@@ -39,13 +39,13 @@
 
   &__player {
     align-self: flex-end;
-    position: relative;
+    position: absolute;
     bottom: 0;
     left: 100%;
     z-index: 2;
     opacity: 0;
     max-height: 88%;
-    width: 130%;
+    width: 100%;
     object-fit: contain;
     animation: 1.6s cubic-bezier(0.33, 1, 0.68, 1) 0s 1 animatePlayerIn forwards;
   }
