--- a/src/apps/components/Team/TeamImage/styles.scss
+++ b/src/apps/components/Team/TeamImage/styles.scss
@@ -41,6 +41,7 @@
   z-index: 1;
 
   img {
+    display: inline-block;
     height: 100%;
     max-width: unset;
   }
